[package]
name = "poise_disc_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.tokio]
version = "1.14"
features = ["macros", "rt-multi-thread"]

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
features = ["collector"]
branch = "master"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde_json]
version = "1.0"

[dependencies.dotenv]
version="0.15.0"